ARV-170125-1. При редактировании операции можно добавлять теги